# SMART

./: .gitignore  README.md  data_preprocess.py  environment.yml  pyproject.toml  requirements.txt  train.py  val.py
configs/train/: train_scalable.yaml
configs/validation/: validation_scalable.yaml
data/valid_demo/: 1a146468873b7871.pkl  1a37753b91c30e16.pkl  1b076986122dc653.pkl  1c83f56236e33b4.pkl  1ce0b4bbd35a6ad1.pkl  1d3daf744e65dd7c.pkl  1d71990efc3c6c0e.pkl  1d8ff1c6acd0f266.pkl  1ea00a2a7b936853.pkl  2a716fad0956ffcf.pkl  2ab47807431834c1.pkl
scripts/: install_pyg.sh  traj_clstering.py
smart/datamodules/: __init__.py  scalable_datamodule.py
smart/datasets/: __init__.py  preprocess.py  scalable_dataset.py
smart/layers/: __init__.py  attention_layer.py  fourier_embedding.py  mlp_layer.py
smart/metrics/: __init__.py  average_meter.py  min_ade.py  min_fde.py  next_token_cls.py
smart/model/: __init__.py  smart.py
smart/modules/: __init__.py  agent_decoder.py  map_decoder.py  smart_decoder.py
smart/preprocess/: preprocess.py
smart/transforms/: __init__.py  target_builder.py
smart/utils/: __init__.py  cluster_reader.py  config.py  geometry.py  graph.py  list.py  log.py  nan_checker.py  weight_init.py
